--- a/index.html
+++ b/index.html
@@ -176,29 +176,259 @@
             aria-selected="false">Especiais</button>
         </li>
       </ul>
-      <div class="tab-content" id="myTabContent">
+      <div class="tab-content" id="coffeesTabContent">
         <div class="tab-pane fade show active" id="espresso-tab-pane" role="tabpanel" aria-labelledby="espresso-tab"
-          tabindex="0">Expressos</div>
+          tabindex="0">
+          <!--  coffee cards -->
+          <div class="row row-cols-1 row-cols-md-2 g-4 mt-3">
+            <div class="col">
+              <div class="card-menu">
+                <img
+                  src="https://plus.unsplash.com/premium_photo-1674327105074-46dd8319164b?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Y29mZmV8ZW58MHx8MHx8fDA%3D"
+                  class="card-img-top" alt="café">
+                <div class="card-body">
+                  <h5 class="card-title">Café Expresso 1</h5>
+                  <p class="card-text">R$ 20,00</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card-menu">
+                <img
+                  src="https://plus.unsplash.com/premium_photo-1674327105074-46dd8319164b?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Y29mZmV8ZW58MHx8MHx8fDA%3D"
+                  class="card-img-top" alt="café">
+                <div class="card-body">
+                  <h5 class="card-title">Café Expresso 2</h5>
+                  <p class="card-text">R$ 22,00</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card-menu">
+                <img
+                  src="https://plus.unsplash.com/premium_photo-1674327105074-46dd8319164b?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Y29mZmV8ZW58MHx8MHx8fDA%3D"
+                  class="card-img-top" alt="café">
+                <div class="card-body">
+                  <h5 class="card-title">Café Expresso 3</h5>
+                  <p class="card-text">R$ 23,00</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card-menu">
+                <img
+                  src="https://plus.unsplash.com/premium_photo-1674327105074-46dd8319164b?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Y29mZmV8ZW58MHx8MHx8fDA%3D"
+                  class="card-img-top" alt="café">
+                <div class="card-body">
+                  <h5 class="card-title">Café Expresso 4</h5>
+                  <p class="card-text">19,50</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="tab-pane fade" id="cappuccinos-tab-pane" role="tabpanel" aria-labelledby="cappuccinos-tab"
-          tabindex="0">Cappuccinos
+          tabindex="0">
+          <!--  coffee cards -->
+          <div class="row row-cols-1 row-cols-md-2 g-4 mt-3">
+            <div class="col">
+              <div class="card-menu">
+                <img
+                  src="https://plus.unsplash.com/premium_photo-1674327105074-46dd8319164b?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Y29mZmV8ZW58MHx8MHx8fDA%3D"
+                  class="card-img-top" alt="café">
+                <div class="card-body">
+                  <h5 class="card-title">Café Expresso 1</h5>
+                  <p class="card-text">R$ 20,00</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card-menu">
+                <img
+                  src="https://plus.unsplash.com/premium_photo-1674327105074-46dd8319164b?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Y29mZmV8ZW58MHx8MHx8fDA%3D"
+                  class="card-img-top" alt="café">
+                <div class="card-body">
+                  <h5 class="card-title">Café Expresso 2</h5>
+                  <p class="card-text">R$ 22,00</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card-menu">
+                <img
+                  src="https://plus.unsplash.com/premium_photo-1674327105074-46dd8319164b?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Y29mZmV8ZW58MHx8MHx8fDA%3D"
+                  class="card-img-top" alt="café">
+                <div class="card-body">
+                  <h5 class="card-title">Café Expresso 3</h5>
+                  <p class="card-text">R$ 23,00</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card-menu">
+                <img
+                  src="https://plus.unsplash.com/premium_photo-1674327105074-46dd8319164b?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Y29mZmV8ZW58MHx8MHx8fDA%3D"
+                  class="card-img-top" alt="café">
+                <div class="card-body">
+                  <h5 class="card-title">Café Expresso 4</h5>
+                  <p class="card-text">19,50</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="tab-pane fade" id="iced-coffe-tab-pane" role="tabpanel" aria-labelledby="iced-coffe-tab"
-          tabindex="0">Gelados
+          tabindex="0">
+          <!--  coffee cards -->
+          <div class="row row-cols-1 row-cols-md-2 g-4 mt-3">
+            <div class="col">
+              <div class="card-menu">
+                <img
+                  src="https://plus.unsplash.com/premium_photo-1674327105074-46dd8319164b?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Y29mZmV8ZW58MHx8MHx8fDA%3D"
+                  class="card-img-top" alt="café">
+                <div class="card-body">
+                  <h5 class="card-title">Café Expresso 1</h5>
+                  <p class="card-text">R$ 20,00</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card-menu">
+                <img
+                  src="https://plus.unsplash.com/premium_photo-1674327105074-46dd8319164b?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Y29mZmV8ZW58MHx8MHx8fDA%3D"
+                  class="card-img-top" alt="café">
+                <div class="card-body">
+                  <h5 class="card-title">Café Expresso 2</h5>
+                  <p class="card-text">R$ 22,00</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card-menu">
+                <img
+                  src="https://plus.unsplash.com/premium_photo-1674327105074-46dd8319164b?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Y29mZmV8ZW58MHx8MHx8fDA%3D"
+                  class="card-img-top" alt="café">
+                <div class="card-body">
+                  <h5 class="card-title">Café Expresso 3</h5>
+                  <p class="card-text">R$ 23,00</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card-menu">
+                <img
+                  src="https://plus.unsplash.com/premium_photo-1674327105074-46dd8319164b?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Y29mZmV8ZW58MHx8MHx8fDA%3D"
+                  class="card-img-top" alt="café">
+                <div class="card-body">
+                  <h5 class="card-title">Café Expresso 4</h5>
+                  <p class="card-text">19,50</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="tab-pane fade" id="specials-coffe-tab-pane" role="tabpanel" aria-labelledby="specials-coffe-tab"
-          tabindex="0">Especiais</div>
+          tabindex="0">
+          <!--  coffee cards -->
+          <div class="row row-cols-1 row-cols-md-2 g-4 mt-3">
+            <div class="col">
+              <div class="card-menu">
+                <img
+                  src="https://plus.unsplash.com/premium_photo-1674327105074-46dd8319164b?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Y29mZmV8ZW58MHx8MHx8fDA%3D"
+                  class="card-img-top" alt="café">
+                <div class="card-body">
+                  <h5 class="card-title">Café Expresso 1</h5>
+                  <p class="card-text">R$ 20,00</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card-menu">
+                <img
+                  src="https://plus.unsplash.com/premium_photo-1674327105074-46dd8319164b?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Y29mZmV8ZW58MHx8MHx8fDA%3D"
+                  class="card-img-top" alt="café">
+                <div class="card-body">
+                  <h5 class="card-title">Café Expresso 2</h5>
+                  <p class="card-text">R$ 22,00</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card-menu">
+                <img
+                  src="https://plus.unsplash.com/premium_photo-1674327105074-46dd8319164b?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Y29mZmV8ZW58MHx8MHx8fDA%3D"
+                  class="card-img-top" alt="café">
+                <div class="card-body">
+                  <h5 class="card-title">Café Expresso 3</h5>
+                  <p class="card-text">R$ 23,00</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card-menu">
+                <img
+                  src="https://plus.unsplash.com/premium_photo-1674327105074-46dd8319164b?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Y29mZmV8ZW58MHx8MHx8fDA%3D"
+                  class="card-img-top" alt="café">
+                <div class="card-body">
+                  <h5 class="card-title">Café Expresso 4</h5>
+                  <p class="card-text">19,50</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Local -->
+    <section id="local" class="container text-center mb-5">
+      <!-- Button  modal -->
+      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#localModal">
+        Quero conhecer o coffee Shop
+      </button>
+
+      <!-- Modal -->
+      <div class="modal fade" id="localModal" tabindex="-1" aria-labelledby="localModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="localModalLabel">Estamos te esperando!</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <p>
+                Te esperamos na rua BLABLABLA, n 850 - DR. Carlos Joca
+                <br>
+                São Léo/RS
+              </p>
+              <iframe style="width: 100%;" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
+                id="gmap_canvas"
+                src="https://maps.google.com/maps?width=520&amp;height=400&amp;hl=en&amp;q=%20Sao%20Pedro%20do%20Sul+()&amp;t=&amp;z=12&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
   </main>
 
-
-
-
-
+    <!-- Footer -->
+  <footer class="text-center bg-dark p-5 mt-5 text-light">
+    <img width="80" src="./assets/images/logo.png" alt="">
+    <p class=" mt-2 mb-0 fw-bold">
+      Coffee Shop | Transformando sua experiência com café
+    </p>
+    <p>
+      (51) 98456-1456
+    </p>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous">
+  </script>
 </body>
 
 </html>
